--- a/resume/projectsWithDemo.tex
+++ b/resume/projectsWithDemo.tex
@@ -1,4 +1,4 @@
-\cvsection{Projects}
+\cvmysection{Projects}
 \begin{cvprojects}
 % Usage: \cventry{<projectName>}{<Language>}{<date>}{<description>}
   \cvproject
@@ -9,11 +9,11 @@
     % \textbf{}
       \begin{cvitems}
         \item {Designed and developed an event schedule web application which allows user to register/login and add/update/remove events.}
-        \item {Built the responsive web page with \textbf{React} and \textbf{Redux} by refactoring open source templates.}
+        \item {Built a responsive web page with \textbf{React} and \textbf{Redux}.}
         \item {Created a \textbf{MongoDB} database to store user info and event data, and built \textbf{RESTful} APIs with \textbf{Node.js}, \textbf{Express.js} and \textbf{Mongoose}.}
         \item {Implemented server-side token based user authentication with \textbf{Passport.js}, \textbf{JsonWebToken} and \textbf{Bcrypt}.}
-        \item {Utilized \textbf{Joi} to validate request and \textbf{Winston} to log requests as well as corresponding response content and response time.}
-        \item {Wrote server-side integration tests with \textbf{Mocha}, \textbf{Chai} and \textbf{Supertest}.}
+        \item {Utilized \textbf{Joi} to validate request body, and \textbf{Winston} to log requests, response status, response time, and errors.}
+        \item {Tested the API with \textbf{Mocha}, \textbf{Chai} and \textbf{Supertest}, deployed the app to \textbf{Heroku}.}
       \end{cvitems}
     }
     
@@ -25,25 +25,25 @@
     % \textbf{}
       \begin{cvitems}
         \item {Created a geolocation-based social network web application with \textbf{React} and \textbf{Ant Design}.}
-        \item {Utilized \textbf{GeoLocation API} and \textbf{Google Map API} to implement features such as "Create Post", "Nearby Posts As Gallery" and "Nearby Posts In Map".}
-        \item {Built a basic token based registration/login/logout flow with \textbf{React Router v4} and server-side user authentication with \textbf{JWT}.}
+        \item {Utilized \textbf{Google Map API} to implement features such as "Create Post", "Nearby Posts As Gallery" and "Nearby Posts In Map".}
+        \item {Built a basic token based registration/login/logout flow with \textbf{React Router v4} and server-side user authentication with \textbf{JsonWebToken}.}
       \end{cvitems}
     }
+
     
     \cvproject
-    {Satellite image classification}
-    {\href{https://github.com/wuhxxx/satellite-image-unet}{Github}}
-    {}
+    {NBA Player Strength Visualization}
+    {\href{http://github.com/wuhxxx/nba-shotchart}{Github  }}
+    {\href{http://nba-shotchart.s3-website-us-west-1.amazonaws.com}{  Demo}}
     {
     % \textbf{}
       \begin{cvitems}
-        \item {Built a deep \textbf{convolutional neural network} based on U-Net architecture using \textbf{Keras} with \textbf{TensorFlow} backend.}
-        \item {Fed in 500MB satellite images data and trained the network to classify each pixel into one of six landscape classes.}
-        \item {Optimized the number of down-samplings to avoid overfitting, classification accuracies of all landscape classes are increased to 90.11\% - 98.30\% after training. }
+        \item {Developed a dashboard using \textbf{React}, \textbf{D3.js} and \textbf{Ant Design} backed by API from stats.nba.com to visualize individual player’s shot data, including a shot chart and user profile view.}
+        \item {Created 4 extra filters and 2 shot themes(hexbin and scatter) to provide more customized visualization on the shot chart.}
+        \item {Built an autocomplete player search bar providing a list of players(image and name) in the suggestion list.}
       \end{cvitems}
     }
-    
-    
+
     
     \cvproject
     {News App for Android}
@@ -58,23 +58,20 @@
         \item{Integrated \textbf{Retrofit} and \textbf{Rxjava} to pull the latest news data from NewsAPI.org.}
       \end{cvitems}
     }
-    
 
     
-    % \cvproject
-    % {NBA Player Strength Visualization}
-    % {\href{http://github.com/wuhxxx/nba-shotchart}{Github  }}
-    % {\href{http://nba-shotchart.s3-website-us-west-1.amazonaws.com}{  Demo}}
-    % {
-    % % \textbf{}
-    %   \begin{cvitems}
-    %     \item {Developed a dashboard using \textbf{React}, \textbf{D3.js} and \textbf{Ant Design} backed by API from stats.nba.com to visualize individual player’s shot data, including a shot chart and user profile view.}
-    %     \item {Created 4 extra filters and 2 shot themes(hexbin and scatter) to provide more customized visualization on the shot chart.}
-    %     \item {Built an autocomplete player search bar providing a list of players(image and name) in the suggestion list.}
-    %   \end{cvitems}
-    % }
-    
-    
+    \cvproject
+    {Satellite image classification}
+    {\href{https://github.com/wuhxxx/satellite-image-unet}{Github}}
+    {}
+    {
+    % \textbf{}
+      \begin{cvitems}
+        \item {Built a deep \textbf{convolutional neural network} based on U-Net architecture using \textbf{Keras} with \textbf{TensorFlow} backend.}
+        \item {Fed in 500MB satellite images data and trained the network to classify each pixel into one of six landscape classes.}
+        \item {Optimized the number of down-samplings to avoid overfitting, classification accuracies of all landscape classes are increased to 90.11\% - 98.30\% after training. }
+      \end{cvitems}
+    }
     
     \cvproject
     {Online Shop}
