--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,21 +1,21 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvmysection{Skills}
 
 
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\begin{cvskills}
+\begin{cvmyskills}
 
 %---------------------------------------------------------
-  \cvskill
+  \cvmyskill
     {Programming Language} % Category
     {JavaScript/ES6+, TypeScript, Java, Python, C++} % Skills
 
 %---------------------------------------------------------
-  \cvskill
+  \cvmyskill
     {Technologies \& Framework} % Category
     {Node.js, Express.js, Mocha, React, Redux, HTML5, CSS, MongoDB, MySQL, Hibernate, Spring, Keras} % Skills
 
@@ -25,4 +25,4 @@
 %     {Korean, English, Japanese, Chinese} % Skills
 
 %---------------------------------------------------------
-\end{cvskills}
+\end{cvmyskills}
