--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Summary}
+\cvmysection{Summary}
 
 
 %-------------------------------------------------------------------------------
