--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,5 +10,10 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Strong experience in developing web and mobile applications. Proficient in JavaScript full stack development. Familiar with Java Servlet, Spring framework, Android development and neural networks. Constantly curious about new technologies and concepts. Desire to learn new skills and grow. Enjoy building quality applications with clean code and detailed docs.  Eager to bring improvements by leveraging better technologies. Prepared to solve problems and overcome challenges.
+2 years programming experience in Java and JavaScript. Strong experience in developing web and mobile applications. Proficient in full stack JavaScript development. Familiar with Java Servlet, Spring framework, Android development and machine learning. Constantly curious about new technologies and concepts. Desire to learn new skills and grow. Enjoy building quality applications with clean code and detailed docs. Eager to bring improvements by leveraging better technologies.
 \end{cvparagraph}
+
+
+% 2+ years’ hands-on coding experience, 1+years’ experience in web development. Actively seeking full-time engineer job.
+
+% Current graduate student, majoring in Computer Science, actively seeking Summer Internship in fields of Software Development. Acquired a depth of knowledge in modern computer science techniques like backend development, machine learning, natural language processing, big data and web crawler, etc. A highly-effective programmer, a dedicated team contributor, and most importantly, a passionate problem solver.
