--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -9,77 +9,93 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
   \cventry
-    {} % Job title
-    {PLAT Corp.} % Organization
-    {} % Location
-    {} % Date(s)
+    {Software Engineer II} % Job title
+    {Personalized Beauty Discovery, Inc.} % Organization
+    {San Mateo, CA} % Location
+    {Apr. 2019 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+        \item {Developed an internal web portal using vanilla \textbf{HTML/CSS/JavaScript} for visualizing tree-like user experience configurations and delivering an end to end configuration editing experience.}
+        \item {Designed and built a feature that recognizes CMS assets in the \textbf{GraphQL} response and retrieves corresponding IDs, then integrated it with a custom \textbf{chrome extension} to allow highlighting CMS contents directly in web pages served by the \textbf{Next.js + GraphQL} platform.}
+        \item {Worked in a 4-member team to build and launch a new single-page application platform which consists of a \textbf{kotlin} based \textbf{GraphQL} server and a \textbf{Next.js} server with \textbf{TypeScript}; implemented the logged out homepage in the new platform to showcase a \textbf{60\%} faster page load time compared to the old tech stack.}
+        \item {Migrated several common \textbf{React} components from a \textbf{JavaScript + Flow + SASS} library to a \textbf{TypeScript + styled-components + styled-system} library.}
+        \item {Migrated pages of a user subscription management flow from Angular 2 to a \textbf{React + Redux + React Router} single-page application platform, and led a 3-member team to migrate 2 other subscription management flows.}
+        \item {Implemented a static maintenance page with vanilla \textbf{HTML/CSS/JavaScript}, and setup a CI/CD pipeline for it using \textbf{Terraform} and \textbf{Jenkins}.}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-      \end{cvitems}
-    }
+% %---------------------------------------------------------
+%   \cventry
+%     {} % Job title
+%     {PLAT Corp.} % Organization
+%     {} % Location
+%     {} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) of tasks/responsibilities
+%         \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
+%         \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
+%         \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+%       \end{cvitems}
+%     }
 
-%---------------------------------------------------------
-  \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
-      \end{cvitems}
-    }
+% %---------------------------------------------------------
+%   \cventry
+%     {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
+%     {R.O.K Cyber Command, MND} % Organization
+%     {Seoul, S.Korea} % Location
+%     {Aug. 2014 - Apr. 2016} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) of tasks/responsibilities
+%         \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
+%         \item {Implemented a distributed web stress test tool with high anonymity.}
+%         \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
+%       \end{cvitems}
+%     }
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp. (Start-up company)} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
+% %---------------------------------------------------------
+%   \cventry
+%     {Game Developer Intern at Global Internship Program} % Job title
+%     {NEXON} % Organization
+%     {Seoul, S.Korea \& LA, U.S.A} % Location
+%     {Jan. 2013 - Feb. 2013} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) of tasks/responsibilities
+%         \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
+%         \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
+%         \item {Won the 2nd prize in final evaluation.}
+%       \end{cvitems}
+%     }
 
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
+% %---------------------------------------------------------
+%   \cventry
+%     {Software Engineer} % Job title
+%     {ShitOne Corp. (Start-up company)} % Organization
+%     {Seoul, S.Korea} % Location
+%     {Dec. 2011 - Feb. 2012} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) of tasks/responsibilities
+%         \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
+%         \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
+%       \end{cvitems}
+%     }
+
+% %---------------------------------------------------------
+%   \cventry
+%     {Freelance Penetration Tester} % Job title
+%     {SAMSUNG Electronics} % Organization
+%     {S.Korea} % Location
+%     {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
+%     {
+%       \begin{cvitems} % Description(s) of tasks/responsibilities
+%         \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
+%         \item {Conducted penetration testing on SAMSUNG Smart TV.}
+%       \end{cvitems}
+%       %\begin{cvsubentries}
+%       %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
+%       %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
+%       %\end{cvsubentries}
+%     }
 
 %---------------------------------------------------------
 \end{cventries}
