--- a/resume/projectsWithDemo.tex
+++ b/resume/projectsWithDemo.tex
@@ -3,8 +3,8 @@
 % Usage: \cventry{<projectName>}{<Language>}{<date>}{<description>}
   \cvproject
     {Events Schedule}
-    {\href{https://github.com/wuhxxx/event-schedule}{Github  }}
-    {\href{https://event-schedule-app.herokuapp.com}{  Demo}}
+    {\href{https://github.com/wuhxxx/event-schedule}{Github}}
+    {}
     {
     % \textbf{}
       \begin{cvitems}
@@ -19,8 +19,8 @@
     
   \cvproject
     {Location based Social Network}
-    {\href{https://github.com/wuhxxx/around}{Github  }}
-    {\href{https://around-web.herokuapp.com}{  Demo}}
+    {\href{https://github.com/wuhxxx/around}{Github}}
+    {}
     {
     % \textbf{}
       \begin{cvitems}
@@ -34,7 +34,7 @@
     \cvproject
     {NBA Player Strength Visualization}
     {\href{http://github.com/wuhxxx/nba-shotchart}{Github  }}
-    {\href{http://nba-shotchart.s3-website-us-west-1.amazonaws.com}{  Demo}}
+    {}
     {
     % \textbf{}
       \begin{cvitems}
@@ -45,48 +45,48 @@
     }
 
     
-    \cvproject
-    {News App for Android}
-    {\href{https://github.com/wuhxxx/news-app}{Github}}
-    {}
-    {
-    % \textbf{}
-      \begin{cvitems}
-        \item {Built a Tinder-like News app based on \textbf{MVP} architectural pattern.}
-        \item {Created \textbf{ViewPager} with \textbf{BottomBar} that holds News/Save/Setting Tabs’ state in the MainActivity concurrently.}
-        \item {Utilized Mindorks’s \textbf{PlaceHolderView} to implement swiping gestures for liking/disliking the news.}
-        \item{Integrated \textbf{Retrofit} and \textbf{Rxjava} to pull the latest news data from NewsAPI.org.}
-      \end{cvitems}
-    }
+    % \cvproject
+    % {News App for Android}
+    % {\href{https://github.com/wuhxxx/news-app}{Github}}
+    % {}
+    % {
+    % % \textbf{}
+    %   \begin{cvitems}
+    %     \item {Built a Tinder-like News app based on \textbf{MVP} architectural pattern.}
+    %     \item {Created \textbf{ViewPager} with \textbf{BottomBar} that holds News/Save/Setting Tabs’ state in the MainActivity concurrently.}
+    %     \item {Utilized Mindorks’s \textbf{PlaceHolderView} to implement swiping gestures for liking/disliking the news.}
+    %     \item{Integrated \textbf{Retrofit} and \textbf{Rxjava} to pull the latest news data from NewsAPI.org.}
+    %   \end{cvitems}
+    % }
 
     
-    \cvproject
-    {Satellite image classification}
-    {\href{https://github.com/wuhxxx/satellite-image-unet}{Github}}
-    {}
-    {
-    % \textbf{}
-      \begin{cvitems}
-        \item {Built a deep \textbf{convolutional neural network} based on U-Net architecture using \textbf{Keras} with \textbf{TensorFlow} backend.}
-        \item {Fed in 500MB satellite images data and trained the network to classify each pixel into one of six landscape classes.}
-        \item {Optimized the number of down-samplings to avoid overfitting, classification accuracies of all landscape classes are increased to 90.11\% - 98.30\% after training. }
-      \end{cvitems}
-    }
+    % \cvproject
+    % {Satellite image classification}
+    % {\href{https://github.com/wuhxxx/satellite-image-unet}{Github}}
+    % {}
+    % {
+    % % \textbf{}
+    %   \begin{cvitems}
+    %     \item {Built a deep \textbf{convolutional neural network} based on U-Net architecture using \textbf{Keras} with \textbf{TensorFlow} backend.}
+    %     \item {Fed in 500MB satellite images data and trained the network to classify each pixel into one of six landscape classes.}
+    %     \item {Optimized the number of down-samplings to avoid overfitting, classification accuracies of all landscape classes are increased to 90.11\% - 98.30\% after training. }
+    %   \end{cvitems}
+    % }
     
-    \cvproject
-    {Online Shop}
-    {}
-    {}
-    {
-    % \textbf{}
-      \begin{cvitems}
-        \item {Designed and built an online shopping website for users to browse products, edit shopping cart and checkout.}
-        \item {Implemented the web application using \textbf{Spring Web MVC} to achieve loosely coupling. }
-        \item {Created a \textbf{MySQL} database and perform database operations with \textbf{Hibernate}.}
-        \item {Developed a \textbf{Spring Web Flow} for checkout and enabled \textbf{Spring Security} to implement user authentication as well as authorization.}
-        \item {Built an advertising platform that implements second-price bidding algorithm, and integrate the platform into online shopping website to deliver ads to users.}
-      \end{cvitems}
-    }
+    % \cvproject
+    % {Online Shop}
+    % {}
+    % {}
+    % {
+    % % \textbf{}
+    %   \begin{cvitems}
+    %     \item {Designed and built an online shopping website for users to browse products, edit shopping cart and checkout.}
+    %     \item {Implemented the web application using \textbf{Spring Web MVC} to achieve loosely coupling. }
+    %     \item {Created a \textbf{MySQL} database and perform database operations with \textbf{Hibernate}.}
+    %     \item {Developed a \textbf{Spring Web Flow} for checkout and enabled \textbf{Spring Security} to implement user authentication as well as authorization.}
+    %     \item {Built an advertising platform that implements second-price bidding algorithm, and integrate the platform into online shopping website to deliver ads to users.}
+    %   \end{cvitems}
+    % }
     
     
     
