--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -11,13 +11,18 @@
 
 %---------------------------------------------------------
   \cvmyskill
-    {Programming Language} % Category
-    {JavaScript/ES6+, TypeScript, Java, Python, C++} % Skills
+    {Languages} % Category
+    {JavaScript/ES6+, TypeScript, HTML, CSS/Sass, Kotlin, Java, Python} % Skills
 
 %---------------------------------------------------------
   \cvmyskill
-    {Technologies \& Framework} % Category
-    {Node.js, Express.js, Mocha, React, Redux, HTML5, CSS, MongoDB, MySQL, Hibernate, Spring, Keras} % Skills
+    {Technologies} % Category
+    {React, Next.js, Redux, GraphQL, CSS-in-JS, Node.js, MongoDB, Spring, Reactor 3} % Skills
+
+%---------------------------------------------------------
+  \cvmyskill
+    {Tools} % Category
+    {Git, AWS, Heroku, Terraform, Jenkins} % Skills
 
 %---------------------------------------------------------
 %   \cvskill
