--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -10,7 +10,7 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-2 years programming experience in Java and JavaScript. Strong experience in developing web and mobile applications. Proficient in full stack JavaScript development. Familiar with Java Servlet, Spring framework, Android development and machine learning. Constantly curious about new technologies and concepts. Desire to learn new skills and grow. Enjoy building quality applications with clean code and detailed docs. Eager to bring improvements by leveraging better technologies.
+Strong experience in building high performance web applications. Proficient in full stack JavaScript development. Familiar with Spring framework and Java based backend development. Constantly curious about new technologies and concepts. Desire to learn new skills and grow. Enjoy building quality applications with clean code and detailed docs. Eager to bring improvements by leveraging better technologies.
 \end{cvparagraph}
 
 
