--- a/resume.tex
+++ b/resume.tex
@@ -59,10 +59,10 @@
 \name{Hongxin}{Wu}
 % \position{Software Engineer{\enskip\cdotp\enskip}Security}
 % \position{Seeking full stack software engineer jobs}
-\address{39939 Stevenson Common, Apt 3029, Fremont, CA 94538, U.S.}
-\mobile{(+1) 315-928-8852} 
+\address{Bay Area, CA}
+\mobile{(510) 432-8319} 
 %%% Social
-\email{hwu139@syr.edu}
+\email{hongxin.hw@gmail.com}
 \linkedin{wuhxxx}
 \github{wuhxxx}
 % \gitlab{gitlab-id}
@@ -95,6 +95,7 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
+\input{resume/experience.tex}
 \input{resume/education.tex}
 \input{resume/projectsWithDemo.tex}
 % \input{resume/simpleProjects.tex}
